# ansible-role-k8s

./: .ansible-lint-ignore  .gitignore  .talismanrc  .yamllint  LICENSE  Makefile  README.md  devbox.json  pyproject.toml  requirements.yml
.github/workflows/: argocd.yml  awxoperator.yml  default.yml  keepalive.yml  lint.yml  longhorn.yml  main.yml  molecule.yml  release.yml  update.yml
defaults/: main.yml
defaults/main/: argocd.yml  awx-operator.yml  certmanager.yml  harbor.yml  k8s.yml  keel.yml  longhorn.yml  metallb.yml  metrics-server.yml  mysql.yml  nginx.yml  olm.yml  opensearch.yml  pgo.yml  quay.yml  reflector.yml  sealedsecrets.yml  secrets.yml  strimzi.yml  zalando.yml
handlers/: main.yml
meta/: main.yml
molecule/argocd/: molecule.yml  side_effect.yml
molecule/awxoperator/: molecule.yml
molecule/common/: converge.yml  create.yml  destroy.yml  kind_create.yml  kind_destroy.yml  prepare.yml  rke2_create.yml  rke2_prepare.yml  verify.yml
molecule/default/: converge.yml  create.yml  destroy.yml  molecule.yml  prepare.yml  side_effect.yml  verify.yml
molecule/harbor/: molecule.yml
molecule/longhorn/: destroy.yml  molecule.yml
molecule/mysql/: molecule.yml
molecule/opensearch/: molecule.yml
molecule/strimzi/: molecule.yml
molecule/vars/: shared.yml
molecule/zalando/: molecule.yml
tasks/: argocd.yml  certmanager.yml  checks.yml  deploy.yml  k8s.yml  main.yml  metallb.yml  olm.yml  verify.yml
tasks/deploy/: argocd.yml  awx-operator.yml  certmanager.yml  check.yml  harbor.yml  keel.yml  longhorn.yml  metallb.yml  metrics-server.yml  mysql.yml  olm.yml  opensearch.yml  pgo.yml  quay.yml  reflector.yml  (+4 more)
templates/: metallb.j2.yml
(+28 files in other folders)
