[tool.poetry]
name = "nephelaiio.k8s"
version = "0.1.0"
description = ""
authors = ["nephelaiio"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.5.0", markers = "platform_system != 'Windows'" }
ansible = "^9.6.0"
molecule = "^24.2.1"
netaddr = "^1.3.0"
kubernetes = "^29.0.0"
openshift = "^0.13.2"
github3-py = "^4.0.1"
jmespath = "^1.0.1"
yamllint = "^1.35.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
