[tool.poetry]
name = "nephelaiio.k8s"
version = "0.1.0"
description = ""
authors = ["nephelaiio"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ansible = "^11.2.0"
ansible-lint = "^25.1.2"
molecule = "^25.2.0"
netaddr = "^1.3.0"
kubernetes = "^32.0.0"
openshift = "^0.13.2"
github3-py = "^4.0.1"
jmespath = "^1.0.1"
yamllint = "^1.35.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
